- Show Back button after cloning - Improve staging introduction after cloning - Create real table for snapshot listing to fix UI issues like wrapping of very long table names - Clean up some legacy comments - Merge [WPS-47] and show table names for debugging purposes

--- a/src/Backend/public/css/wpstg-admin.css
+++ b/src/Backend/public/css/wpstg-admin.css
@@ -367,11 +367,14 @@
     width: 500px;
 }
 
-#wpstg-home-link,
+
 #wpstg-try-again {
     display: none;
 }
 
+#wpstg-home-link {
+    float: right;
+}
 
 #wpstg-loader {
     content: url('../img/loading.gif');
